# roadmap-manager-v2

./: .gitignore  GANTT.md  LOCAL_DEVELOPMENT.md  README.md  docker-compose_mock.yml  start-local.bat
rm_be/: Dockerfile  README.md  mock_entries.json  mockusers.json  pyproject.toml
rm_be/rm_be/: __init__.py  config.py  main.py
rm_be/rm_be/api/: deps.py  routes.py  schemas.py  utils.py
rm_be/rm_be/core/: security.py
rm_be/rm_be/database/: __init__.py  connection.py  indexes.py  init_db.py  models.py  repositories.py
rm_be/rm_be/scripts/: __init__.py  seed_entries.py  seed_lc_data.py  seed_users.py
rm_be/scripts/: test_auth.py
rm_fe/: Dockerfile  README.md  index.html  package.json  vite.config.js
rm_fe/src/: App.jsx  main.jsx
rm_fe/src/components/: ErrorBoundary.jsx
rm_fe/src/components/admin/: AddRemoveUsers.jsx  AdminResponsibleView.jsx  UpdateLC.jsx
rm_fe/src/components/auth/: LoginForm.jsx
rm_fe/src/components/layouts/: CELayout.jsx  RoleBasedLayout.jsx
rm_fe/src/components/pointage/: LCSidebar.jsx  PointageView.jsx  WeeklyCalendar.jsx
rm_fe/src/components/responsible/: ModificationRequests.jsx  TeamPointageTable.jsx
rm_fe/src/components/ui/: AutocompleteInput.jsx
rm_fe/src/contexts/: AuthContext.jsx  NotificationContext.jsx
rm_fe/src/hooks/: useAuth.js
rm_fe/src/lib/: api.js  supabase.js
rm_fe/src/utils/: dateUtils.js
