[project]
name = "rm_be"
version = "0.1.0"
description = "Roadmap Manager Backend API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "python-keycloak>=3.9.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]
